Attach image to song Remove image from song Fetch and post images to and from database Fix initial values when editing a song
