# server/src/model/song.py
@@ -1,4 +1,4 @@
-from pydantic import BaseModel
+from pydantic import BaseModel, Field
 
 
 class Song(BaseModel):
@@ -6,7 +6,7 @@ class Song(BaseModel):
     title: str
     artist: str
     duration: float
-    thumbnail_file_name: str
+    thumbnail_file_name: str = Field(None, nullable=True)
 
     def __eq__(self, other):
         assert isinstance(other, Song), "Must compare with a song"
@@ -17,3 +17,18 @@ class Song(BaseModel):
 
     def __repr__(self) -> str:
         return str(self)
+
+
+if __name__ == "__main__":
+    song_data = {
+        "title": "hi",
+        "artist": "hi",
+        "id": 0,
+        "duration": 3,
+        "thumbnail_file_name": None
+    }
+
+    filtered_song_data = {key: value for key, value in song_data.items() if value is not None}
+    print(filtered_song_data)
+
+    Song(**song_data)
